# morning-news

./: .gitignore  README.md  pyproject.toml
automation/: com.han.morning-news.plist  run_morning_news.sh
content/: content_spec.md  state.json
docs/: feed.xml  index.html
docs/metadata/: 2026-06-03.json  2026-06-05.json  2026-06-06.json  2026-06-07.json  2026-06-08.json  2026-06-10.json  2026-06-11.json  2026-06-12.json  2026-06-14.json  2026-06-16.json  2026-06-18.json  2026-06-19.json  2026-06-20.json  2026-07-02.json
docs/reports/: 2026-06-03-delivery_report.json  2026-06-05-delivery_report.json  2026-06-06-delivery_report.json  2026-06-07-delivery_report.json  2026-06-08-delivery_report.json  2026-06-10-delivery_report.json  2026-06-11-delivery_report.json  2026-06-12-delivery_report.json  2026-06-14-delivery_report.json  2026-06-16-delivery_report.json  2026-06-18-delivery_report.json  2026-06-19-delivery_report.json  2026-06-20-delivery_report.json  2026-07-02-delivery_report.json
docs/scripts/: 2026-06-03-sample-oil-rates-ai.md  2026-06-05-conditional-risk-on-ai-hk-flows.md  2026-06-06-hot-payrolls-ai-hk-flow-risk.md  2026-06-07-weekend-liquidity-ai-funding-reset.md  2026-06-08-funding-costs-ai-oil-friction.md  2026-06-10-us-tech-china-trade-indonesia-ma.md  (+8 more)
morning_news/: __init__.py  audio_pipeline.py  feed.py  retention.py  tts.py  validation.py
tests/: test_audio_pipeline.py  test_build_episode.py  test_feed.py  test_retention.py  test_tts.py  test_validation.py
tools/: __init__.py  build_episode.py  draft_prompt.md
(+16 files in other folders)
