[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "morning-news"
version = "0.1.0"
description = "Morning News podcast publishing pipeline"
requires-python = ">=3.11"
dependencies = [
  "edge-tts>=7.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
include = ["morning_news*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

